# dfz

./: Cargo.toml  README.md
src/: basic.rs  example.rs  glsl.rs  main.rs  model.rs  utils.rs
src/GLSL/: ambient.frag  cloud.glsl  compute.glsl  deferred.vert  directional.frag  directional.vert  fragment.glsl  lighting.frag  vertext.glsl
src/model_loader/: face.rs  loader.rs  mod.rs
src/system/: mod.rs  system.rs
src/system/shaders/: ambient.frag  deferred.frag  deferred.vert  directional.frag  light_obj.frag  light_obj.vert  skybox.frag  skybox.vert
