[package]
name = "dfz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"
image = "0.24.0"
winit = "0.28.0"
rand = "0.8.5"
cgmath = "0.18"
glium = "0.32.1"

[profile.dev]
opt-level = 1 
